clusters/cl01tl/manifests/kaneo/HTTPRoute-kaneo.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kaneo
  labels:
    app.kubernetes.io/instance: kaneo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kaneo
    helm.sh/chart: kaneo-5.3.0
  annotations:
    gethomepage.dev/description: Kaneo
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Tools
    gethomepage.dev/icon: sh-kaneo.webp
    gethomepage.dev/name: Issue Tracking
    gethomepage.dev/siteMonitor: http://kaneo.kaneo:80
    gethomepage.dev/statusStyle: dot
    gethomepage.dev/weight: "150"
  namespace: kaneo
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "kaneo.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kaneo
          namespace: kaneo
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
